Adicionei o campo quantidade

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li> Descrição (nome) do lanche </li>
     <li><input type="text" name="txtDescricao"></li>
     <li><label> Preço $ </label></li>
+    <li><label>Quantidade</label></li>
     <li><input type="text" name="txtPreco"></li>
     <li><button type="submit"> Cadastrar </button></li>
   </ul>
